Updated For Mobile

--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            A1<span class="stem">STEM</span>Academy
+        <div class="header-container">
+            <div class="logo">
+                A1<span class="stem">STEM</span>Academy
+            </div>
+            <div class="hamburger" id="hamburger">
+                &#9776;
+            </div>
+            <nav id="nav-links">
+                <ul>
+                    <li><a href="#about-section">About Us</a></li>
+                    <li><a href="#math-section">Math</a></li>
+                    <li><a href="#physics-section">Physics</a></li>
+                    <li><a href="#sat-math-section">SAT/PSAT Math</a></li>
+                    <li><a href="#biology-section">Biology</a></li>
+                    <li><a href="#chemistry-section">Chemistry</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#about-section">About Us</a></li>
-                <li><a href="#math-section">Math</a></li>
-                <li><a href="#physics-section">Physics</a></li>
-                <li><a href="#sat-math-section">SAT/PSAT Math</a></li>
-                <li><a href="#biology-section">Biology</a></li>
-                <li><a href="#chemistry-section">Chemistry</a></li>
-            </ul>
-        </nav>
         <div class="contact-info">
             <p><strong>Phone:</strong> 908-940-1855</p>
             <p><strong>Email:</strong> contact@a1stemacademy.com</p>
@@ -29,6 +34,7 @@
     </header>
 
     <main>
+        <!-- Content Sections -->
         <section id="about-section" class="content-section">
             <h2>About Us</h2>
             <p>Welcome to A1STEMAcademy! We specialize in <strong>1-on-1</strong> tutoring to help you excel in your studies. Our highly qualified tutors are dedicated to providing personalized instruction tailored to your learning needs. Whether you need help with Math, Physics, SAT/PSAT prep, Biology, or Chemistry, our goal is to help you achieve high scores and a deep understanding of the subject matter.</p>
@@ -37,7 +43,7 @@
         <section id="math-section" class="content-section">
             <h2>Math</h2>
             <div class="section-content">
-                <img src="math.jpg" alt="Math Image">
+                <img src="math.jpg" alt="Mathematics course material">
                 <div>
                     <p>Our Math curriculum covers a broad spectrum of mathematical disciplines, from basic algebra to advanced calculus. Each course is designed to build a strong foundation and prepare students for higher-level math challenges.</p>
                     <ul>
@@ -56,7 +62,7 @@
         <section id="physics-section" class="content-section">
             <h2>Physics</h2>
             <div class="section-content">
-                <img src="physics.jpg" alt="Physics Image">
+                <img src="physics.jpg" alt="Physics course material">
                 <div>
                     <p>Our Physics courses explore the fundamental principles of the universe, from motion and energy to electromagnetism and thermodynamics. Each course includes both theoretical and practical components to enhance understanding.</p>
                     <ul>
@@ -77,7 +83,7 @@
         <section id="sat-math-section" class="content-section">
             <h2>SAT/PSAT Math</h2>
             <div class="section-content">
-                <img src="sat_math.jpg" alt="SAT/PSAT Math Image">
+                <img src="sat_math.jpg" alt="SAT/PSAT Math course material">
                 <div>
                     <p>Our SAT/PSAT Math prep courses are designed to equip students with the skills and strategies needed to excel in the mathematics sections of these standardized tests. We cover both the non-calculator and calculator sections thoroughly.</p>
                     <ul>
@@ -91,7 +97,7 @@
         <section id="biology-section" class="content-section">
             <h2>Biology</h2>
             <div class="section-content">
-                <img src="biology.jpg" alt="Biology Image">
+                <img src="biology.jpg" alt="Biology course material">
                 <div>
                     <p>Our Biology courses delve into the study of living organisms and their interactions with the environment. Students will learn about cellular processes, genetics, evolution, and ecosystems through a mix of theoretical and practical lessons.</p>
                     <p>Classes: Full</p>
@@ -102,7 +108,7 @@
         <section id="chemistry-section" class="content-section">
             <h2>Chemistry</h2>
             <div class="section-content">
-                <img src="chemistry.jpeg" alt="Chemistry Image">
+                <img src="chemistry.jpeg" alt="Chemistry course material">
                 <div>
                     <p>Our Chemistry courses explore the composition, structure, properties, and changes of matter. Students will gain a deep understanding of chemical reactions, stoichiometry, thermodynamics, and atomic theory.</p>
                     <p>Classes: Full</p>
