Added Hamburger Menu In Mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="hamburger" id="hamburger">
                 &#9776;
             </div>
-            <nav id="nav-links">
+            <nav id="nav-links" class="nav-links">
                 <ul>
                     <li><a href="#about-section">About Us</a></li>
                     <li><a href="#math-section">Math</a></li>
@@ -34,7 +34,6 @@
     </header>
 
     <main>
-        <!-- Content Sections -->
         <section id="about-section" class="content-section">
             <h2>About Us</h2>
             <p>Welcome to A1STEMAcademy! We specialize in <strong>1-on-1</strong> tutoring to help you excel in your studies. Our highly qualified tutors are dedicated to providing personalized instruction tailored to your learning needs. Whether you need help with Math, Physics, SAT/PSAT prep, Biology, or Chemistry, our goal is to help you achieve high scores and a deep understanding of the subject matter.</p>
