Fixed Hamburger Menu AND Remove Full Class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="hamburger" id="hamburger">
                 &#9776;
             </div>
-            <nav id="nav-links" class="nav-links">
+            <nav id="nav-links">
                 <ul>
                     <li><a href="#about-section">About Us</a></li>
                     <li><a href="#math-section">Math</a></li>
@@ -34,6 +34,7 @@
     </header>
 
     <main>
+        <!-- Content Sections -->
         <section id="about-section" class="content-section">
             <h2>About Us</h2>
             <p>Welcome to A1STEMAcademy! We specialize in <strong>1-on-1</strong> tutoring to help you excel in your studies. Our highly qualified tutors are dedicated to providing personalized instruction tailored to your learning needs. Whether you need help with Math, Physics, SAT/PSAT prep, Biology, or Chemistry, our goal is to help you achieve high scores and a deep understanding of the subject matter.</p>
@@ -99,21 +100,34 @@
                 <img src="biology.jpg" alt="Biology course material">
                 <div>
                     <p>Our Biology courses delve into the study of living organisms and their interactions with the environment. Students will learn about cellular processes, genetics, evolution, and ecosystems through a mix of theoretical and practical lessons.</p>
-                    <p>Classes: Full</p>
+                    <ul>
+                        <li>Cell Biology: Understanding the structure and function of cells, including metabolism and cell division.</li>
+                        <li>Genetics: Study of heredity, genetic variation, and the role of genes in living organisms.</li>
+                        <li>Evolution: Exploring the processes that drive the diversity and unity of life.</li>
+                        <li>Ecology: Examination of ecosystems, including energy flow and nutrient cycles.</li>
+                        <li>Human Anatomy and Physiology: Study of the human body's structure and function.</li>
+                    </ul>
                 </div>
             </div>
         </section>
-
+        
         <section id="chemistry-section" class="content-section">
             <h2>Chemistry</h2>
             <div class="section-content">
                 <img src="chemistry.jpeg" alt="Chemistry course material">
                 <div>
                     <p>Our Chemistry courses explore the composition, structure, properties, and changes of matter. Students will gain a deep understanding of chemical reactions, stoichiometry, thermodynamics, and atomic theory.</p>
-                    <p>Classes: Full</p>
+                    <ul>
+                        <li>General Chemistry: Fundamentals of chemistry including atomic structure and chemical bonding.</li>
+                        <li>Organic Chemistry: Study of carbon-based compounds and their reactions.</li>
+                        <li>Inorganic Chemistry: Examination of non-organic compounds, including metals and minerals.</li>
+                        <li>Physical Chemistry: Understanding the physical properties of molecules, and the forces that act upon them.</li>
+                        <li>Analytical Chemistry: Techniques for analyzing substances to determine their composition.</li>
+                    </ul>
                 </div>
             </div>
         </section>
+        
     </main>
 
     <footer>
